--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>CliqueUp</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css" rel="stylesheet" integrity="sha384-gv0oNvwnqzF6ULI9TVsSmnULNb3zasNysvWwfT/s4l8k5I+g6oFz9dye0wg3rQ2Q" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-	<div id="app-container"></div>
+	<div id="app-container">
+		<div id="ui"></div>
+		<div id="map"></div>
+	</div>
 	<script type="text/javascript" src="./js/app.js"></script>
+	<script type="text/javascript" src="./js/map-styles.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH9HwNj5DurMSH6WKhugy8ARQ8eijzkc4&callback=initMap" async defer></script>
 </body>
 </html>
