--- a/public/about-page.html
+++ b/public/about-page.html
@@ -8,15 +8,19 @@
 </head>
 <body>
 	<div id="app-container">
-		<div id="load">
-  <div>G</div>
-  <div>N</div>
-  <div>I</div>
-  <div>D</div>
-  <div>A</div>
-  <div>O</div>
-  <div>L</div>
-</div>
+		<div class="loader">
+			  <div class="spinner">
+			    <div class="spinner">
+			      <div class="spinner">
+			        <div class="spinner">
+			          <div class="spinner">
+			            <div class="spinner"></div>
+			          </div>
+			        </div>
+			      </div>
+			    </div>
+				</div>
+			</div>
 		<div id="ui"></div>
 		<div id="map"></div>
 	</div>
