--- a/public/about-page.html
+++ b/public/about-page.html
@@ -22,10 +22,10 @@
 				</div>
 			</div>
 		<div id="ui"></div>
-		<div id="map"></div>
+		<div id="map-home"></div>
 	</div>
-	<script type="text/javascript" src="./js/app.js"></script>
 	<script type="text/javascript" src="./js/map-styles2.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH9HwNj5DurMSH6WKhugy8ARQ8eijzkc4&callback=initMap" async defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH9HwNj5DurMSH6WKhugy8ARQ8eijzkc4&callback=initMap"></script>
+	<script type="text/javascript" src="./js/app.js"></script>
 </body>
 </html>
