--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,29 @@
 </head>
 <body>
 	<div id="app-container">
+		<div class="loader">
+			  <div class="spinner">
+			    <div class="spinner">
+			      <div class="spinner">
+			        <div class="spinner">
+			          <div class="spinner">
+			            <div class="spinner"></div>
+			          </div>
+			        </div>
+			      </div>
+			    </div>
+				</div>
+			</div>
 		<div id="ui"></div>
 		<div id="map"></div>
 	</div>
-	<script type="text/javascript" src="./js/app.js"></script>
 	<script type="text/javascript" src="./js/map-styles.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH9HwNj5DurMSH6WKhugy8ARQ8eijzkc4&callback=initMap" async defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH9HwNj5DurMSH6WKhugy8ARQ8eijzkc4&callback=initMap" ></script>
+	<script type="text/javascript" src="./js/app.js"></script>
+
+	<script>
+	console.log('googs', google);
+
+	</script>
 </body>
 </html>
