--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 	</div>
 	<script type="text/javascript" src="./js/map-styles.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAH9HwNj5DurMSH6WKhugy8ARQ8eijzkc4&callback=initMap" ></script>
+	<script src="https://use.fontawesome.com/f50d4d7eaf.js"></script>
 	<script src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 	<script type="text/javascript" src="./js/app.js"></script>
